# obsidian-server-panel

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.MD  TESTING.md  composer.yml  index.html  install-obsidian.sh  justfile  openapi-v3.json  openapi.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  privacy-policy.md  roadmap.md  tailwind.config.js  terms-of-service.md  vite.config.ts
.bruno/: bruno.json  collection.bru
.bruno/Authentication/: Change Password.bru  Get Permissions.bru  Get Users.bru  Login (Token).bru  Login.bru  Logout.bru  Register.bru  Update Permissions.bru
.bruno/Backup Management/: Create Backup.bru  Delete Backup.bru  Get Backup Settings.bru  List Backups.bru  Update Backup Settings.bru  folder.bru
.bruno/Filesystem Operations/: Archive Files.bru  Archive Status.bru  Cancel Archive.bru  Cancel Extract.bru  Cancel Upload.bru  Copy Files.bru  Create New Entry.bru  Delete Files.bru  Download Files.bru  Extract Archive.bru  Extract Status.bru  Get File Contents.bru  Get Files.bru  Move Files.bru  Rename File.bru  Search Files.bru  Set File Contents.bru  Upload File.bru  Upload Progress.bru  Upload URL.bru  folder.bru
.bruno/Forge Versions/: Get Forge Versions.bru  folder.bru
.bruno/Host Info/: Get Host Info.bru  Get Resource Usage (Serverside Event).bru  Get Resource Usage.bru  folder.bru
.bruno/Java Management/: Get Installation Files.bru  Get Java Versions.bru  Install Java Version.bru  Uninstall Java Version.bru  folder.bru
.bruno/Server Management/: Create Server.bru  Delete Mod.bru  Delete Server.bru  Get Console Output.bru  Get Installed Mods.bru  Get Log File.bru  Get Logs.bru  Get Mod Icon.bru  Get Server Icon.bru  Get Server.bru  Get Servers.bru  Install Mod.bru  Kill Server.bru  Ping Server.bru  Restart Server.bru  Send Command.bru  Start Server.bru  Stop Server.bru  Sync Mods.bru  Update Server.bru  folder.bru
.bruno/Updater/: Check for Updates.bru  Get Current Version.bru  Get Update Status.bru  Perform Update.bru  folder.bru
.cargo/: config.toml
.claude/: settings.local.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: -bug-report.md  feature_request.md
.github/workflows/: build-release.md  build-release.yml  docker-publish.yml  publish-ghcr.yml
.jetclient/: jetclient.md
crates/app_db/: Cargo.toml  README.md
crates/app_db/examples/: basic_crud.rs  schema_management.rs  transactions.rs
crates/app_db/src/: database.rs  error.rs  lib.rs  schema.rs  sql.rs  transaction.rs  types.rs
crates/app_db/tests/: integration.rs
crates/backups/: Cargo.toml  LICENSE  README.md
crates/backups/examples/: archive.rs  basic.rs  diff.rs  export_to_stream.rs  ignore_file.rs  list_backups.rs
crates/backups/src/: lib.rs  log_stub.rs
crates/backups/src/actions/: backup_manager.rs  mod.rs
crates/backups/src/cli/: README.md  mod.rs
crates/backups/src/data/: backup_item.rs  mod.rs  modified_file.rs
crates/backups/tests/: backup_manager.rs
crates/cache/: Cargo.toml
crates/curseforge/: Cargo.toml  README.md
crates/curseforge/examples/: category_listing.rs  mod_details.rs  search_mods.rs
crates/curseforge/src/: cache.rs  client.rs  error.rs  lib.rs  search.rs
crates/curseforge/src/models/: category.rs  file.rs  mod.rs  project.rs  search.rs
crates/curseforge/test_fixtures/: categories.json  files.json  mod.json  search_result.json
crates/curseforge/tests/: integration.rs
crates/fabric_loader/: Cargo.toml
crates/fabric_loader/examples/: fabric_check_update.rs  fabric_list_versions.rs
crates/fabric_loader/src/: client.rs  error.rs  lib.rs  models.rs
crates/forge_loader/: Cargo.toml
crates/forge_loader/examples/: forge_check_update.rs  forge_list_versions.rs
crates/forge_loader/src/: client.rs  error.rs  install.rs  lib.rs  models.rs  script_parser.rs
crates/installer/: .gitignore  Cargo.toml
crates/installer/app/: Cargo.toml  build.rs
crates/installer/app/res/fonts/: README.md
crates/installer/app/src/: cli.rs  dialogs.rs  elevation.rs  fonts.rs  handlers.rs  installer.rs  main.rs  markdown.rs  resources.rs  startup.rs  window.rs
crates/installer/app/ui/: README.md  app.slint  common.slint  complete_page.slint  existing_installation_page.slint  installing_page.slint  location_page.slint  options_page.slint  terms_page.slint  welcome_page.slint
crates/installer/lib/: Cargo.toml  README.md
crates/installer/lib/examples/: advanced_config.rs  basic_usage.rs  check_updates.rs  full_workflow.rs
crates/installer/lib/src/: lib.rs  nix.rs  win.rs
crates/minecraft_server/: Cargo.toml
crates/minecraft_server/src/: error.rs  eula.rs  events.rs  installer.rs  lib.rs  models.rs  process.rs  properties.rs  server.rs  versions.rs
crates/minecraft_server/src/cli/: commands.rs  create.rs  mod.rs  run.rs
crates/modrinth/: Cargo.toml  README.md
crates/neoforge_loader/: Cargo.toml
crates/upnp/: Cargo.toml  LICENSE  README.MD
crates/upnp/src/: error.rs  lib.rs  manager.rs  upnp.rs
resources/: bukkit-logo.ai  win32.lib  win32.rc
resources/logo/: obsidian-server-panel-icon.ai
resources/sql/: backups.sql  java_version_map.sql  notifications.sql  server.sql  server_access.sql  user.sql
src/: main.tsx
src-actix/: app_db.rs  asset_endpoint.rs  auth_middleware.rs  authentication_endpoint.rs  backups_endpoint.rs  build.rs  command_line_args.rs  configuration_endpoint.rs  database.rs  ddos_middleware.rs  fabric_endpoint.rs  file_system_endpoint.rs  forge_endpoint.rs  java_endpoint.rs  lib.rs  loader_endpoint.rs  main.rs  minecraft_endpoint.rs  neoforge_endpoint.rs  server_endpoint.rs  server_info_endpoint.rs  server_properties_endpoint.rs
src-actix/actions/: actions_data.rs  actions_db.rs  actions_endpoint.rs  mod.rs
src-actix/actix_util/: asset_endpoint.rs  http_error.rs  mod.rs  path_sanitize.rs
src-actix/authentication/: auth_data.rs  auth_db.rs  auth_endpoint.rs  mod.rs  (+2 more)
src-actix/notifications/: Cargo.toml  mod.rs  notification_data.rs  notification_db.rs  notification_endpoint.rs
src-actix/notifications/src/: db.rs
(+393 files in other folders)
