[workspace]
resolver = "3"
members = ["crates/backups", "crates/installer/lib", "crates/installer/app", "crates/scheduler", "crates/cache", "crates/modrinth", "crates/curseforge", "crates/app_db", "crates/upnp", "crates/fabric_loader", "crates/forge_loader", "crates/neoforge_loader", "crates/minecraft_server"]

[package]
name = "obsidian_server_panel"
version = "0.0.1-alpha"
edition = "2024"
authors = ["Drew Chase"]
build = "src-actix/build.rs"

[[bin]]
name = "obsidian_server_panel"
path = "src-actix/main.rs"

[lib]
name = "obsidian_server_panel_lib"
path = "src-actix/lib.rs"
crate-type = ["lib"]

[dependencies]
actix = { version = "0.13.5" }
actix-web = { version = "4.9.0" }
actix-files = { version = "0.6.6" }
actix-web-lab = { version = "0.24.2" }
actix-web-actors = { version = "4.3.0" }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125" }
pretty_env_logger = "0.5.0"
include_dir = "0.7.4"
walkdir = "2.5.0"
log = "0.4.22"
anyhow = "1.0.95"
thiserror = "2.0.11"
vite-actix = ">=0.2.6"
chrono = { version = "0.4.42", features = ["serde", "clock", "now"] }
sqlx = { version = "0.8.6", features = ["chrono", "json", "runtime-tokio", "derive", "time"] }
serde_hash = { version = "0.2.0" }
bcrypt = { version = "0.17.0" }
enumflags2 = { version = "0.7.12", features = ["serde"] }
futures = "0.3.31"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
sysinfo = { version = "0.36.1", features = ["multithread", "disk", "windows", "system", "user", "network"] }
tokio = { version = "1.46.1", features = ["time", "fs", "rt-multi-thread", "sync", "rt", "macros"] }
tokio-util = { version = "0.7.16", features = ["io-util"] }
regex = { version = "1.11.1", features = ["perf"] }
uuid = { version = "1.17.0", features = ["v4"] }
zip = "3.0.0"
archflow = { version = "0.1.4", features = ["tokio"] }
tokio-interactive = { version = "0.2.0" }
flate2 = { version = "1.1.2" }
tar = "0.4.44"
serde_ini = { version = "0.2.0" }
craftping = { version = "0.7.0", features = ["tokio", "async-tokio"] }
strsim = "0.11.1"
toml = "0.9.4"
base64 = "0.22.1"
notify = { version = "8.1.0", features = ["default", "serde"] }
clap = { version = "4.5.42", features = ["error-context", "derive", "help", "suggestions", "color", "usage", "wrap_help", "unicode", "string", "env"] }
rand = "0.9.1"
obsidian-scheduler = { path="crates/scheduler", features = ["event-timers", "log", "callback-timers"] }
obsidian-backups = { path = "crates/backups", features = ["serde", "logging", "zip", "async-stream"] }
oim = { path = "crates/installer/lib" }
obsidian-upnp = { path = "crates/upnp" }
modrinth = { path = "crates/modrinth" }
curseforge = { path = "crates/curseforge" }
obsidian_database = {path="crates/app_db"}
fabric-loader = { path = "crates/fabric_loader", features = ["logging"] }
forge-loader = { path = "crates/forge_loader", features = ["logging"] }
neoforge-loader = { path = "crates/neoforge_loader", features = ["logging"] }
minecraft-server = { path = "crates/minecraft_server", features = ["logging"] }

[build-dependencies]
include_dir = "0.7.4"
walkdir = "2.5.0"


[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization (slower compile)
strip = true        # Strip symbols from binary
panic = "abort"     # Remove panic unwinding code

[features]
sqlite = ["sqlx/sqlite", "obsidian_database/sqlite"]
mysql = ["sqlx/mysql", "obsidian_database/mysql"]
postgres = ["sqlx/postgres", "obsidian_database/postgres"]
