[package]
name = "obsidian_database"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.29"
thiserror = "2.0.11"
sqlx = { version = "0.8.6", features = ["chrono", "json", "runtime-tokio", "derive", "time"] }



[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
sqlite = ["sqlx/sqlite"]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]