[package]
name = "obsidian-backups"
version = "0.1.3"
edition = "2024"
description = "A Git-based backup library for Rust applications. Originally designed for the Obsidian Minecraft Server Panel, but generic enough to be used in any project requiring file backup management. "
authors = ["Drew Chase"]
license = "MIT"
repository = "https://github.com/Obsidian-Minecraft-Server-Portal/obsidian-backup-system.git"
readme = "README.MD"
keywords = ["obsidian", "backup", "backups"]
categories = ["command-line-utilities", "development-tools", "compression", "filesystem"]


[[bin]]
name = "obackup"
path = "src/cli/mod.rs"
required-features = ["cli", "serde", "logging", "zip"]


[dependencies]
git2 = { version = "0.20" }
serde = { version = "1.0", optional = true, features = ["derive", "serde_derive"] }
clap = { version = "4", optional = true, features = ["derive", "usage", "suggestions", "error-context", "help", "string", "wrap_help", "color", "unicode"] }
anyhow = { version = "1", features = ["backtrace"] }
serde_json = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
pretty_env_logger = { version = "0.5", optional = true }
sevenz-rust2 = { version = "0.19", optional = true }
chrono = { version = "0.4", features = ["serde"] }
ignore = {version = "0.4.23"}
archflow = { version = "0.1", optional = true }
tokio = { version = "1", optional = true, features = ["io-util", "macros"] }

[dev-dependencies]
log = "0.4"
pretty_env_logger = "0.5"

[features]
# This will build the CLI application.
cli = ["dep:clap", "dep:serde_json", "dep:pretty_env_logger"]

# This will enable serialization/deserialization support.
serde = ["dep:serde"]

# This will enable logging support.
logging = ["dep:log"]

# This will enable support for exporting backups as 7z archives.
zip = ["dep:sevenz-rust2"]

# This will enable async streaming support for exporting backups as ZIP archives.
async-stream = ["dep:archflow", "dep:tokio"]