[package]
name = "curseforge"
version = "0.1.0"
edition = "2024"
description = "A Rust client library for the CurseForge API v1 with built-in caching"
readme = "README.md"

[dependencies]
cache = { path = "../cache" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["sync", "time"] }
urlencoding = "2.1"
log = { version = "0.4", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"

[features]
default = []
logging = ["dep:log"]
