[package]
name = "minecraft-server"
version = "0.1.0"
edition = "2024"
description = "Standalone Minecraft server installer, manager, and runner"

[lib]
name = "minecraft_server"
path = "src/lib.rs"

[[bin]]
name = "mcserver"
path = "src/cli/mod.rs"
required-features = ["cli"]

[dependencies]
# Core
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ini = "0.2.0"
tokio = { version = "1", features = ["sync", "time", "fs", "rt-multi-thread", "macros", "signal"] }
tokio-interactive = "0.2.0"
log = { version = "0.4", optional = true }

# Minecraft versions + server JAR downloads
piston-mc = "0.1.4-beta"

# Mod loader installation
fabric-loader = { path = "../fabric_loader" }
forge-loader = { path = "../forge_loader" }
neoforge-loader = { path = "../neoforge_loader" }

# CLI-only deps
clap = { version = "4.5", features = ["derive", "color", "suggestions", "wrap_help"], optional = true }
dialoguer = { version = "0.11", optional = true }
indicatif = { version = "0.17", optional = true }
pretty_env_logger = { version = "0.5", optional = true }

[features]
default = []
logging = ["dep:log"]
cli = ["dep:clap", "dep:dialoguer", "dep:indicatif", "dep:pretty_env_logger", "logging"]
