[package]
name = "obsidian-upnp"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/Obsidian-Minecraft-Server-Portal/upnp.git"
description = "An async wrapper for UPnP port forwarding"

[dependencies]
easy-upnp = "0.3.1"
log = "0.4.22"
tokio = { version = ">=1", features = ["sync", "rt"] }
obsidian-scheduler = { path = "../scheduler", features = ["callback-timers", "log"] }
anyhow = ">=1"
thiserror = "2.0.17"
