[package]
name = "notifications"
version = "0.1.0"
edition = "2021"

[dependencies]
obsidian-cryptography = { git = "https://github.com/Obsidian-Minecraft-Server-Portal/cryptography.git" }
obsidian-sqlite = { git = "https://github.com/Obsidian-Minecraft-Server-Portal/sqlite.git" }
lazy_static = "1.5.0"
serde_json = "1.0.132"
serde = { version = "1.0.210", features = ["derive"] }
sqlite = "0.36.1"
num-traits = "0.2.19"