[package]
name = "oim"
version = "0.1.0"
edition = "2024"
authors = ["Drew Chase"]
description = "A Rust library for managing Obsidian installations."
license = "MIT OR Apache-2.0"
repository = "https://github.com/orgs/Obsidian-Minecraft-Server-Portal/obsidian-installation-manager"

[lib]
name = "oim"
path = "src/lib.rs"

[dependencies]
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive", "serde_derive"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tar = "0.4"
flate2 = "1.0"
zip = "6.0.0"
anyhow = "1.0"
tokio = { version = "1.42", features = ["sync", "fs", "macros", "rt-multi-thread"] }
futures = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
windows-service = "0.8"
windows = { version = "0.62.2", features = ["Win32_System_Services", "Win32_Foundation", "Win32_System_Registry", "Win32_Security", "Win32_Storage", "Win32_Storage_FileSystem"] }